--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -394,6 +394,13 @@
                 "SignOut": "Cerrar Sesión",
                 "Continue": "Continuar",
                 "RenewalFailed": "No se pudo renovar la sesión. Por favor cierre la sesión y vuelva a intentar."
+            },
+            "StudyRedirect": {
+                "Title": "[ES]Your participation",
+                "Text1": "[ES]Count Me In has an open project specific to your cancer type.",
+                "Text2": "[ES]Use the button below to join the {{study}} and learn more about this existing work.",
+                "GoToProject": "[ES]Go to project",
+                "Cancel": "Cancelar"
             }
         },
         "Warning": {
