Add Participation page (Pancan)

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -83,7 +83,7 @@
                 "Time": "10-15 minutes",
                 "Title": "Provide consent for the study",
                 "Text": "This section consists of several pages, but feel free to take your time. Your progress will be automatically saved so you can come back to it later. If you are signing up for / with your child, depending on their age, we may also ask them to “assent” or agree that they would also like to participate in the study.",
-                "ViewConsentDocumentButton": "View Consent Document",
+                "Button": "View Consent Document",
                 "ImageAlt": "Computer screen displaying online consent form"
             },
             "Step2": {
@@ -91,7 +91,7 @@
                 "Time": "5 minutes",
                 "Title": "Tell us where you’ve been treated",
                 "Text": "Tell us where you’ve been treated for your cancer. We ask where patients have been treated, so that we can request medical records, and if applicable, archived tumor tissue.",
-                "ViewMedicalReleaseButton": "View Medical Release",
+                "Button": "View Medical Release",
                 "ImageAlt": "Computer screen displaying medical center"
             },
             "Step3": {
@@ -99,7 +99,7 @@
                 "Time": "5 minutes",
                 "Title": "Respond to surveys about you and your experience with cancer",
                 "Text": "In these surveys, we ask questions about your experience with cancer, like what type of cancer you were diagnosed with, when you were diagnosed, and the types of treatments you’ve had.",
-                "ViewSurveysButton": "“View Surveys",
+                "Button": "“View Surveys",
                 "ImageAlt": "Computer screen displaying online survey"
             },
             "Step4": {
@@ -107,7 +107,7 @@
                 "Time": "10 minutes",
                 "Title": "Provide a saliva and/or blood sample",
                 "Text": "We will send you a kit to collect a sample of your saliva and/or blood. We will study these samples to help improve our understanding of cancer.",
-                "ViewKitInstructionsButton": "View Kit Instructions",
+                "Button": "View Kit Instructions",
                 "ImageAlt": "Sample collection kit"
             },
             "Step5": {
