--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -99,7 +99,7 @@
                 "Time": "5 minutes",
                 "Title": "Respond to surveys about you and your experience with cancer",
                 "Text": "In these surveys, we ask questions about your experience with cancer, like what type of cancer you were diagnosed with, when you were diagnosed, and the types of treatments you’ve had.",
-                "Button": "“View Surveys",
+                "Button": "View Surveys",
                 "ImageAlt": "Computer screen displaying online survey"
             },
             "Step4": {
