rgp: put back in pre-review message text

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1129,6 +1129,10 @@
     },
     "StudyMessages": {
       "Application": {
+        "PreReview": {
+          "Subject": "Application",
+          "Message": "Thank you for your interest in the Rare Genomes Project! Please see below to complete your application."
+        },
         "InReview": {
           "Subject": "Application",
           "Message": "Your application is being reviewed.",
